Use Map.copyOf instead of Collections.unmodifiableMap
Co-authored-by: Florentin Dörre <florentin.dorre@neotechnology.com>